# WifiControlledCar

./: .gitignore  LICENSE  README.md
.github/workflows/: build_debug.yml  build_release.yml  build_unittests.yml  clang-format.yml  clang-tidy.yml  cmake.yml  cppcheck.yml
software/: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  cmake_build_debug.sh  cmake_build_release.sh
software/.devcontainer/: Dockerfile
software/components/hal/: gpio.c  gpio.h
software/scripts/: clang_format_folder.sh  clang_tidy_folder.sh  file_headers.py  run_cppcheck.sh
software/src/: CMakeLists.txt  Template.cpp  Template.h
software/src/application/: CMakeLists.txt  main.cpp
software/src/controller/: CMakeLists.txt
software/src/domain/: CMakeLists.txt
software/src/hal/: CMakeLists.txt
software/src/infrastructure/: CMakeLists.txt
